@@ -10,6 +10,9 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-08-12 niel
+	Fix: Error matching timestamp in predb_import_daily_batch.php caused by using wrong regex
+		match index. Switched to using named regex matches instead.
 2017-09-02 niel
 	Mrg: dev-lithium-logger branch. Add basic logger which can be expanded later.
 2017-08-30 DariusIII
